# research-assistant

./: .gitignore  errors.md  main.py  pyproject.toml  requirements.txt
backend/: logger.py  src.py
backend/config/: config.py  loader.py  prompts.yaml
backend/middlewares/: exception_handlers.py
backend/modules/: embeddings.py  llm.py  load_vectorstore.py  ocr_loader.py  pdf_handlers.py  prompt_builder.py  query_handlers.py  retriever.py
backend/routes/: ask_questions.py  upload_pdfs.py
frontend/: app.py
frontend/components/: chatui.py  history_download.py  upload.py
frontend/utils/: api.py  stream_response.py
ocr_cache/: GT-1_eng03_W.pkl  Helix 3.80 Owner's Manual - English .pkl  Zoom_G3Xn.pkl  nux_mg-30_user_manual.pkl
research_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
